src/test/deca/syntax/invalid/parser/oracle/multi_string_block_println.deca
{
	println("Comment multi line
	not possible in block");
}
